fix signup ben v-align

--- a/scss/mobile/_header.scss
+++ b/scss/mobile/_header.scss
@@ -1,4 +1,11 @@
 .d-header {
+  button {
+    &.sign-up-button::before {
+      align-self: center;
+      position: static;
+    }
+  }
+
   .icons .icon:active {
     background-color: transparent;
   }
